[gd_scene load_steps=5 format=3 uid="uid://epyms2x5cfc2"]

[ext_resource type="Script" path="res://UI/Title/title_scene.gd" id="1_f1itu"]
[ext_resource type="Theme" uid="uid://b1bbott1b53v8" path="res://UI/Theme/game_theme.tres" id="1_i52bf"]
[ext_resource type="PackedScene" uid="uid://cluviy54xbvar" path="res://Map/background_2.tscn" id="3_qx1dq"]
[ext_resource type="PackedScene" uid="uid://cwc25dwvs5bqp" path="res://Map/tile_map_2.tscn" id="4_vqm73"]

[node name="TitleScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_i52bf")
script = ExtResource("1_f1itu")

[node name="Node2D" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="Background2" parent="Node2D" instance=ExtResource("3_qx1dq")]

[node name="TileMap2" parent="Node2D" instance=ExtResource("4_vqm73")]

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 20.0
offset_bottom = 66.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 0.501961, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 4
theme_override_font_sizes/font_size = 38
text = "小少侠"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -86.0
offset_top = -112.0
offset_right = -22.0
offset_bottom = -4.0
grow_horizontal = 0
grow_vertical = 0

[node name="NewGame" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "开始游戏"

[node name="Setting" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "设置"

[node name="AboutGame" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "关于游戏"

[node name="ExitGame" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "退出游戏"
